// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments 1`] = `
"<p>Foobar</p>
<pre><code>Foo&#x3C;--COMMENTS I will not get removed because I am in a code block DEF COMMENTS-->bar
</code></pre>"
`;

exports[`comments custom different markers 1`] = `
"<p>Foobar</p>
<pre><code>Foo&#x3C;--foo I will not get removed because I am in a code block bAR-->bar
</code></pre>"
`;

exports[`comments custom same markers 1`] = `
"<p>Foobar</p>
<pre><code>Foo&#x3C;--foo I will not get removed because I am in a code block foo-->bar
</code></pre>"
`;

exports[`compiles to markdown 1`] = `
"Foo<!-- - I will be gone ABC  - -->bar

    Foo<--COMMENTS I will not get removed because I am in a code block DEF COMMENTS-->bar

<!-- - Unfinished block won't get parsed either GHI
"
`;
